--- a/frontend/src/i18n/messages.json
+++ b/frontend/src/i18n/messages.json
@@ -85,6 +85,7 @@
       "family_name": "Family Name",
       "alternate_name": "Alternate Names",
       "alternate_email": "Alternate emails",
+      "telephone": "Phone numbers",
       "location": "Location",
       "works_for": "Works for",
       "job_title": "Job Title",
@@ -96,6 +97,7 @@
       "family_name_definition": "The family name of this contact",
       "alternate_names_definition": "Other names this contact goes by",
       "alternate_emails_definition": "Other emails this contact uses",
+      "telephone_definition": "Phone numbers this contact uses",
       "address_definition": "The location of this contact",
       "works_for_definition": "Organization this contact works for",
       "job_title_definition": "The job title of this contact",
@@ -208,6 +210,7 @@
       "family_name": "Nom de famille",
       "alternate_name": "Autres noms",
       "alternate_email": "Adresses e-mail alternatives",
+      "telephone": "Numéros de téléphones",
       "location": "Localisation",
       "works_for": "Travaille pour",
       "job_title": "Titre du poste",
@@ -219,6 +222,7 @@
       "family_name_definition": "Le nom de famille de ce contact",
       "alternate_names_definition": "Autres noms par lesquels ce contact est connu",
       "alternate_emails_definition": "Autres adresses e-mail utilisées par ce contact",
+      "telephone_definition": "Numéros de téléphones utilisées par ce contact",
       "address_definition": "L'emplacement de ce contact",
       "works_for_definition": "Organisation pour laquelle ce contact travaille",
       "updated_at_definition": "Dernière date de modification",
