--- a/frontend/src/i18n/messages.json
+++ b/frontend/src/i18n/messages.json
@@ -85,7 +85,7 @@
       "family_name": "Family Name",
       "alternate_name": "Alternate Names",
       "alternate_email": "Alternate emails",
-      "telephone": "Phone numbers",
+      "telephone": "Phone number",
       "location": "Location",
       "works_for": "Works for",
       "job_title": "Job Title",
@@ -97,7 +97,7 @@
       "family_name_definition": "The family name of this contact",
       "alternate_names_definition": "Other names this contact goes by",
       "alternate_emails_definition": "Other emails this contact uses",
-      "telephone_definition": "Phone numbers this contact uses",
+      "telephone_definition": "Phone number this contact uses",
       "address_definition": "The location of this contact",
       "works_for_definition": "Organization this contact works for",
       "job_title_definition": "The job title of this contact",
@@ -117,7 +117,9 @@
         "group": "Group",
         "chat": "Chat",
         "role": "Role"
-      }
+      },
+      "phone_copied": "Phone number copied",
+      "contact_phone_copied": "Phone number has been copied to your clipboard"
     },
     "mining": {
       "toast_canceled_title": "Mining canceled",
@@ -210,7 +212,7 @@
       "family_name": "Nom de famille",
       "alternate_name": "Autres noms",
       "alternate_email": "Adresses e-mail alternatives",
-      "telephone": "Numéros de téléphones",
+      "telephone": "Numéro de téléphone",
       "location": "Localisation",
       "works_for": "Travaille pour",
       "job_title": "Titre du poste",
@@ -222,7 +224,7 @@
       "family_name_definition": "Le nom de famille de ce contact",
       "alternate_names_definition": "Autres noms par lesquels ce contact est connu",
       "alternate_emails_definition": "Autres adresses e-mail utilisées par ce contact",
-      "telephone_definition": "Numéros de téléphones utilisées par ce contact",
+      "telephone_definition": "Numéro de téléphone utilisées par ce contact",
       "address_definition": "L'emplacement de ce contact",
       "works_for_definition": "Organisation pour laquelle ce contact travaille",
       "updated_at_definition": "Dernière date de modification",
@@ -242,7 +244,9 @@
         "group": "Groupe",
         "chat": "Chat",
         "role": "Role"
-      }
+      },
+    "phone_copied": "Numéro de téléphone copié",
+    "contact_phone_copied": "Numéro de téléphone a été copié dans votre presse-papiers"
     },
     "mining": {
       "toast_canceled_title": "Extraction annulée",
