--- a/frontend/src/i18n/messages.json
+++ b/frontend/src/i18n/messages.json
@@ -85,7 +85,7 @@
       "family_name": "Family Name",
       "alternate_name": "Alternate Names",
       "alternate_email": "Alternate emails",
-      "telephone": "Phone number",
+      "telephone": "Phone",
       "location": "Location",
       "works_for": "Works for",
       "job_title": "Job Title",
@@ -212,7 +212,7 @@
       "family_name": "Nom de famille",
       "alternate_name": "Autres noms",
       "alternate_email": "Adresses e-mail alternatives",
-      "telephone": "Numéro de téléphone",
+      "telephone": "Téléphone",
       "location": "Localisation",
       "works_for": "Travaille pour",
       "job_title": "Titre du poste",
