--- a/frontend/src/i18n/messages.json
+++ b/frontend/src/i18n/messages.json
@@ -60,6 +60,8 @@
       "sign_up_success_header": "Almost done",
       "sign_up_success_message1": "We sent an email to",
       "sign_up_success_message2": "It is a link that will sign you up. If you can't see this email, please check your spam folder.",
+      "sign_up_still_not_receive": "Still did not receive it?",
+      "sign_up_resend_in": "Resend | Resend in {n}s | Resend in {n}s",
       "social_account": "social account",
       "send_reset_instructions": "Send reset instructions",
       "reset_password_confirmed": "Reset Password Confirmed",
@@ -193,6 +195,8 @@
       "sign_up_success_header": "Presque terminé",
       "sign_up_success_message1": "Nous avons envoyé un e-mail à",
       "sign_up_success_message2": "Il contient un lien qui vous inscrira. Si vous ne voyez pas cet e-mail, veuillez vérifier votre dossier de spam.",
+      "sign_up_still_not_receive": "Vous ne l’avez toujours pas reçu ?",
+      "sign_up_resend_in": "Renvoyer | Renvoyer dans {n}s | Renvoyer dans {n}s",
       "social_account": "compte social",
       "send_reset_instructions": "Envoyer les instructions de réinitialisation",
       "reset_password_confirmed": "Réinitialisation du mot de passe confirmée",
