--- a/frontend/src/i18n/messages.json
+++ b/frontend/src/i18n/messages.json
@@ -52,8 +52,9 @@
       "sign_in_failed": "Sign in Failed",
       "invalid_login": "Invalid email or password",
       "weak_password": "Weak password, verify length or character criteria.",
-      "sign_up_success": "Sign up Successfully",
+      "sign_up_success": "Signed up Successfully",
       "confirmation_email": "We have sent a confirmation email to {email}",
+      "confirmation_sent": "Confirmation email sent",
       "sign_up_failed": "Sign up Failed",
       "account_already": "Already have an account?",
       "discover_gems": "Discover hidden gems in your social network",
@@ -189,6 +190,7 @@
       "weak_password": "Mot de passe faible, vérifiez la longueur ou les critères de caractères.",
       "sign_up_success": "Inscription réussie",
       "confirmation_email": "Nous avons envoyé un e-mail de confirmation à {email}",
+      "confirmation_sent": "E-mail de confirmation envoyé",
       "sign_up_failed": "Échec de l'inscription",
       "account_already": "Vous avez déjà un compte ?",
       "discover_gems": "Découvrez des trésors cachés dans votre réseau social",
