--- a/frontend/src/i18n/messages.json
+++ b/frontend/src/i18n/messages.json
@@ -101,7 +101,7 @@
       "alternate_names_definition": "Other names this contact goes by",
       "alternate_emails_definition": "Other emails this contact uses",
       "telephone_definition": "Phone number this contact uses",
-      "address_definition": "The location of this contact",
+      "location_definition": "The location of this contact",
       "works_for_definition": "Organization this contact works for",
       "job_title_definition": "The job title of this contact",
       "updated_at_definition": "Last update date",
@@ -237,7 +237,7 @@
       "alternate_names_definition": "Autres noms par lesquels ce contact est connu",
       "alternate_emails_definition": "Autres adresses e-mail utilisées par ce contact",
       "telephone_definition": "Numéro de téléphone utilisées par ce contact",
-      "address_definition": "L'emplacement de ce contact",
+      "location_definition": "L'emplacement de ce contact",
       "works_for_definition": "Organisation pour laquelle ce contact travaille",
       "updated_at_definition": "Dernière date de modification",
       "created_at_definition": "La date de création de ce contact",
