--- a/frontend/src/i18n/messages.json
+++ b/frontend/src/i18n/messages.json
@@ -126,7 +126,9 @@
     },
     "mining": {
       "toast_canceled_title": "Mining canceled",
-      "toast_canceled_by_connection_detail": "Your mining was interrupted due to an internet connection issue."
+      "toast_canceled_by_connection_detail": "Your mining was interrupted due to an internet connection issue.",
+      "extract_signatures_option": "Extract contact details from signatures",
+      "extract_signatures_sub": "( this may take more time )"
     },
     "error": {
       "default": {
@@ -262,7 +264,9 @@
     },
     "mining": {
       "toast_canceled_title": "Extraction annulée",
-      "toast_canceled_by_connection_detail": "Connexion perdue. Extraction annulée. Veuillez vous reconnecter pour commencer une nouvelle extraction."
+      "toast_canceled_by_connection_detail": "Connexion perdue. Extraction annulée. Veuillez vous reconnecter pour commencer une nouvelle extraction.",
+      "extract_signatures_option": "Extraire les coordonnées depuis les signatures",
+      "extract_signatures_sub": "(l'extraction prendra plus de temps)"
     },
     "error": {
       "default": {
