feat: implement campaign composer, queue processing, and dashboard

--- a/frontend/src/i18n/messages.json
+++ b/frontend/src/i18n/messages.json
@@ -14,6 +14,7 @@
       "cancel": "Cancel",
       "mine": "Mine",
       "contacts": "Contacts",
+      "campaigns": "Campaigns",
       "clean": "Clean",
       "enrich": "Enrich",
       "edit": "Edit",
@@ -157,6 +158,7 @@
       "cancel": "Annuler",
       "mine": "Extraire",
       "contacts": "Contacts",
+      "campaigns": "Campagnes",
       "clean": "Nettoyer",
       "enrich": "Enrichir",
       "edit": "Modifier",
