--- a/frontend/src/i18n/messages.json
+++ b/frontend/src/i18n/messages.json
@@ -14,6 +14,7 @@
       "cancel": "Cancel",
       "mine": "Mine",
       "contacts": "Contacts",
+      "sources": "Sources",
       "clean": "Clean",
       "enrich": "Enrich",
       "edit": "Edit",
@@ -158,6 +159,7 @@
       "cancel": "Annuler",
       "mine": "Extraire",
       "contacts": "Contacts",
+      "sources": "Sources",
       "clean": "Nettoyer",
       "enrich": "Enrichir",
       "edit": "Modifier",
