feat: improve campaigns workflow, consent handling, and local setup (#2613)

--- a/frontend/src/i18n/messages.json
+++ b/frontend/src/i18n/messages.json
@@ -15,6 +15,7 @@
       "mine": "Mine",
       "contacts": "Contacts",
       "sources": "Sources",
+      "campaigns": "Campaigns",
       "clean": "Clean",
       "enrich": "Enrich",
       "edit": "Edit",
@@ -115,6 +116,11 @@
         "unknown": "UNKNOWN",
         "unverified": "UNVERIFIED"
       },
+      "consent": {
+        "legitimate_interest": "Legitimate interest",
+        "opt_out": "Opt-out",
+        "opt_in": "Opt-in"
+      },
       "tag": {
         "professional": "Professional",
         "newsletter": "Newsletter",
@@ -159,6 +165,7 @@
       "cancel": "Annuler",
       "mine": "Extraire",
       "contacts": "Contacts",
+      "campaigns": "Campagnes",
       "sources": "Sources",
       "clean": "Nettoyer",
       "enrich": "Enrichir",
@@ -259,6 +266,11 @@
         "invalid": "INVALIDE",
         "unknown": "INCONNU",
         "unverified": "NON VÉRIFIÉ"
+      },
+      "consent": {
+        "legitimate_interest": "Intérêt légitime",
+        "opt_out": "Opposition (opt-out)",
+        "opt_in": "Consentement (opt-in)"
       },
       "tag": {
         "professional": "Professionnel",
